# WashingMacineSTM

Documentation/: WM UI screen.pptx
Source/: CMakeLists.txt  WachingMachineStm32.qml  WachingMachineStm32.qmlproject  WachingMachineStm32.qmlproject.qtds
